--- a/modules/package.json
+++ b/modules/package.json
@@ -8,9 +8,11 @@
     "amqplib": "^0.8.0",
     "argon2": "^0.28.4",
     "ioredis": "^4.28.5",
-    "ulid": "^2.3.0"
+    "ulid": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.6.2"
+    "@graphql-codegen/cli": "^2.6.2",
+    "@types/uuid": "^8.3.4"
   }
 }
