--- a/modules/tsconfig.json
+++ b/modules/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": "../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "rootDir": "."
+  },
+  "include": [
+    "./"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
 }
