--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,24 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
-    "allowJs": true,
+    "lib": [
+      "es2020"
+    ],
+    "sourceMap": true,
     "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "rootDir": "./",
     "strict": true,
-    "skipLibCheck": true
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],
   "exclude": [
+    "dist",
     "node_modules"
-  ]
+  ],
+  "compileOnSave": false
 }
